# simple-chartjs

./: .copier-answers.yml  LICENSE  README.md  development.md  pyproject.toml  pyrightconfig.json
src/simple_chartjs/: __init__.py  base.py
tests/: test_legend_label.py
typings/caseconverter/: boundaries.pyi  camel.pyi  caseconverter.pyi
